# WebView2_GUI

./: CMakeLists.txt  vcpkg.json
WebView2_GUI/: CMakeLists.txt  WebView2_GUI.cpp
WebView2_GUI/include/Atliac/: WebView2_GUI.h
WebView2_GUI/test.main/: CMakeLists.txt  test.main.cpp
